--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -1,11 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank">《吕氏春秋》中的“养生三患” 是哪三患？</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790697.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/lvshichunqiu-200113-320x200.jpg" align ="left"></a>《吕氏春秋》由战国时期秦国相国吕不韦及其门人编纂而成，是一本杂家代表作。书中有专论养生的文章，提到了“养生三患”。第一患，患好逸恶劳。
-
-“出则以车，入则以辇，务以自佚，命之曰招蹙之机。”有些人出门就坐车，回家也坐车，以舒服快活为第一要务，这会让人短命的！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 11:04 PM	</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790724.md#1" target="_blank">去年12月 多伦多房价涨12% 销量升17.4%</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/can-sold-150x120.jpg" align ="left"></a>多伦多地产局（TREB）数据显示，去年12月多伦多房屋销量同比升17.4%，平均房价同比涨近12%，价量双双创去年下半年新高。尽管如此，由于去年上半年价量表现平平，去年全年房屋销量基本保持在过去10年中的年均中位数水平。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790706.md#1" target="_blank">加央行行长警告：房市泡沫可能卷土重来</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790706.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/10505470-150x120.jpg" align ="left"></a>加拿大央行行长波洛兹（Stephen Poloz）1月9日警告，卑诗等多个省近来房市升温，温哥华投机炒房可能卷土重来，泡沫再现，央行目前在密切关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 10:27 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank">摄影师老爸拍女儿0～20岁 5分钟看女大18变</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/fc9bc005ddf71a1d48522f8eeacde21d-320x200.jpg" align ="left"></a>人家说时光似箭、岁月如梭；当我们看到这个拍摄女儿0～20岁的视频时，不用多余的文字注解、不受地域区隔；你就明白时光飞逝的意思了，尤其是为人父母的人，看到这个视频都会了然于胸的会心一笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:35 PM	</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790192.md#1" target="_blank">幽默学得来！三个视角的转换让观众发笑</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1707061514512483-150x120.jpg" align ="left"></a>脱口秀演员在讲段子或表演段子时会在三个视角间转换，但是，这项关键基本功却从未有人系统性地分析、讨论。而一旦了解使用方法后，你会发现它对于脱口秀表演和让观众发笑有多重要。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank">摄影师老爸拍女儿0～20岁 5分钟看女大18变</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785004.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/fc9bc005ddf71a1d48522f8eeacde21d-150x120.jpg" align ="left"></a>人家说时光似箭、岁月如梭；当我们看到这个拍摄女儿0～20岁的视频时，不用多余的文字注解、不受地域区隔；你就明白时光飞逝的意思了，尤其是为人父母的人，看到这个视频都会了然于胸的会心一笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782340.md#1" target="_blank">流传113年阿嬷的香奈儿 明星花露水又回来了</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c4792ca3daeffc1753a6a4cb07fe96e5-150x120.jpg" align ="left"></a>从清光绪33年就已推出，至今逾百年历史的“明星花露水”，在2019年3月惊传停产，引起网友一片哀嚎；不过幸好，它又被恢复生产了，在2020年将重新上市，这下阿嬷们又可以放心的使用，让它继续飘香了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 7:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789062.md#1" target="_blank">德国饮食传统 (3) ：德国的药酒文化</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789062.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-522280202-150x120.jpg" align ="left"></a>药酒并不是中国人的专利，在世界各地都有不同的药酒，这也是传统草药疗法的一部分。这次我们要介绍的德国人，也是爱喝药酒的民族之一。据统计，德国人每年在草药上的总支出超过20亿美元。在大鱼大肉之后，相较于服用胃肠药，德国人们更爱喝些草药酒来帮助消化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 4:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank">镁是放松情绪的天然镇静剂 “这些食物”能补充</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/magnesium-food_522984916-150x120.jpg" align ="left"></a>时常感到紧张、焦躁或忧郁吗？这可能是体内缺镁的关系。镁有助于稳定情绪和松弛肌肉，只是现代人饮食习惯改变，爱吃加工食品和大鱼大肉，因此普遍有缺镁的情况。在饮食中多摄取一些含镁食物，能让你心情变好。镁有“天然镇静剂”之称，能放松神经肌肉，是让人心情平静、愉快的矿物质。还能影响血糖、血压的调控。富含镁的食物包括：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 2:46 PM			</td></tr>
@@ -30,6 +25,9 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank">哈佛医师：常备4种食材 煮出“抗癌蔬菜汤”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vegetable-soup_450659374-150x120.jpg" align ="left"></a>蔬果中丰富的植化素，具有强化免疫力、抑制癌症等功效。人体不能自行合成植化素，只能从食物中摄取。因此每天喝蔬菜汤，是很好的养生法。专攻免疫力、抗癌研究的哈佛医师高桥弘，综合长期以来的研究成果，建议运用高丽菜等四种常见食材煮“抗癌蔬菜汤”。早餐前喝一碗，养出不易被癌细胞侵袭的抗病体质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:52 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777154.md#1" target="_blank">折耳猫黑煤球配上亮眼异色瞳 萌翻网友</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777154.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/c01ab01d5c39f799ea89e5ee6d2d8873-150x120.jpg" align ="left"></a>黑猫会让人嫌弃说它不吉利吗？不过，这只住在中国名叫牛奶（Milk）的黑猫可是一只网红的幸福猫咪呢？这只全身一片黑的折耳猫，拥有一对奇异的眼睛-被称异色曈，整张脸只看见一对超萌的大眼睛，吸引人着很多网友直呼好可爱！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777187.md#1" target="_blank">小人国住里面吗？插座内藏秘密 微缩世界超疗愈</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/eee9cf2a26a00b406958327ad1bb5aec-150x120.jpg" align ="left"></a>日本一位微缩创作家MOZU，擅长于制作逼真的微缩模型，常常在网路上分享他的微缩作品。那些超级可爱又精致作品，让人沉浸在充满梦幻、生动有趣的小小世界。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 9:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775213.md#1" target="_blank">汉方让你摆脱打鼾烦恼 （续）</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1407142316232483-600x400-150x120.jpg" align ="left"></a>值得推荐的是：“六味地黄丸”，这款药方对治疗鼾症患者，有一定的疗效，“六味地黄丸”有补肾、润肺、理气的功效。“肾”主纳气，“肺”主呼气，所以可治疗通道不利，气机不畅所引起的“鼾症”。另外，由于肥胖者多痰气虚，容易导致“鼾症”而并发“睡眠呼吸中止症”，这类型患者宜用“参苓白术散”宣肺利气、燥湿化痰。这款药方对“阻塞性睡眠.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 3:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778982.md#1" target="_blank">组图：加拿大男子画野生动物 像照片般逼真</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1181050130-150x120.jpg" align ="left"></a>加拿大男子赛德（Nick Sider）擅长写实的野生动物画作，举凡狮子、老虎等大型野兽，在他的画笔下都栩栩如生，而且有雄赳赳的气势，仿佛活了过来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 3:08 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778549.md#1" target="_blank">致敬传统追求细节 2020年室内设计趋势</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778549.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_565638040-150x120.jpg" align ="left"></a>在迈向下一个10年之际，室内设计的风格也将出现转变，我们相信人们将更加拥抱传统，更热情地展现自我，同时，也更渴望将大自然带进室内。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 2:43 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11783310.md#1" target="_blank">汽车维修问与答：气温零下时方向盘变紧</a><br></h3>汽车维修问与答
 
 读者Grace问：李师傅您好!
