--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -7,7 +7,7 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11776083.md#1">中共央视前主持人芮成钢近况被曝光</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11783300.md#1">美杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788275.md#1">114个“耳光”搧向国台办 李敖儿子微博被封</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789532.md#1">陈思敏：中国足球资金寒冬曝经济实情</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789989.md#1">程晓容：60国贺蔡英文胜选 中共输在哪里？</a><br>
@@ -30,7 +30,7 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790784.md#1">【即将直播】美智库举办台湾大选讨论会</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790784.md#1">【即将直播】美智库举办台湾大选研讨会</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789302.md#1">【翻墙必看】揭秘中共公安如何混入香港警队</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790427.md#1">美国对中国可穿戴监测设备等启动337调查</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789726.md#1">内蒙古稀土大亨贿赂莫建成超千万 细节曝光</a><br>
