--- a/gb/ncid278_3.md
+++ b/gb/ncid278_3.md
@@ -1,1 +1,35 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td VALIGN=TOP><p><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/qgedzr297/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qgedzr297/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qgedzr297/djy/blob/master/gb/nf4786.md#1">神韵</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank">安全担忧 美陆军紧随海军禁用TikTok</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg" align ="left"></a>抖音国际版TikTok正在引起越来越多的安全隐患，在美国海军于半个前做出禁用该应用程序的相关规定后，美国陆军也迅速做出反应：禁止其士兵这个正在青少年中流行的短视频应用程序，以免带来安全问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:17 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11757478.md#1" target="_blank">港人感佩法轮功传真相 恭祝李大师新年好</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11757478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_2212-150x120.jpeg" align ="left"></a>香港抗争运动从6月持续至今，在活动现场或网上不时会听到或看到港人向法轮功团体致歉，表示他们以前因低估中共的邪恶程度而误会法轮功，并感谢法轮功学员这些年坚持传播真相。有港人恭祝李洪志大师新年好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank">2019岁末 人权律师及异见人士遭密集抓捕</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11755912.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-3-150x120.jpg" align ="left"></a>自12月26日到31日，十余位包括维权律师、异见人士及部分家属遭到中共当局集中抓捕、抄家、询问，甚至失联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank">《拍案惊奇》2020台湾大选两类观点引关注</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/31/n11756845.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191231222-150x120.jpg" align ="left"></a>2020年1月11日，这么说太远了，就是从今天起再过12天，台湾就要举行大选。华人观众非常关注这场选举的结果，因为大家都觉得，这一次2020大选对台湾的未来命运极为重要。今天我们会简单介绍这场选举的概况，以及最近一次，也是唯一一次总统候选人辩论的要点。然后，作为我们节目几个月来一直关注的重点议题——香港，我们还会谈到一些最新情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756278.md#1" target="_blank">无尽感恩 宜兰法轮功学员向李洪志先生拜年</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg" align ="left"></a>二零一九年十二月二十九日，来自宜兰县各乡镇的部分法轮功学员，在县政府行政大楼向他们的师父拜年。值此象征除旧布新的岁末，宜兰学员由衷感念师父的谆谆教诲与慈悲救度之恩，合影恭祝师父新年好，表达内心最真挚的祝愿，并互相鼓励来年更精进。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 5:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756214.md#1" target="_blank">“秋雨之福教会”牧师王怡被重判9年</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11756214.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/05/605031612581695-150x120.jpg" align ="left"></a>12月30日，大陆知名牧师王怡在成都中院被重判9年有期徒刑，罪名是“煽动颠覆国家政权罪”及“非法经营罪”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 4:05 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753358.md#1" target="_blank">黄琦被秘密转至监狱 母亲仍被软禁</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/page-5-150x120.jpg" align ="left"></a>六四天网创办人，大陆著名人权活动家黄琦于圣诞节前一天12月24日，被中共当局秘密转到四川巴中监狱，剩余刑期还有8年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank">天津强拆世界级别墅群 数百业主走投无路</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/st.coTE9r1M0pCq-150x120.jpg" align ="left"></a>天津武清区世界级岛居别墅区翠金湖美墅岛在寒冬腊月强拆，无安置，赔偿不公，数百业主走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11749398.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（中）</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11749398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2006-7-20-gansu-02-150x120.jpg" align ="left"></a>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世的有30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 4:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank">重庆中学生在学校坠亡 家人被禁见遗体</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-20-150x120.jpg" align ="left"></a>重庆市巫溪中学高二学生王东平在学校期间，疑遭老师羞辱后坠楼身亡，然而其家人至今无法见到死者尸体，并被警察带走，爆光视频也在微博上被接连删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:26 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank">北京女子劳教所前所长李继荣的罪行</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748971.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1068163599_fiaOd0-150x120.jpg" align ="left"></a>原北京女子劳教所所长李继荣积极参与迫害法轮功，对法轮功学员实施残酷的精神和洗脑迫害，罪行累累。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:21 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753695.md#1" target="_blank">中共代理人加速政治分化香港 限制港人自由</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DSC_3766_refine-150x120.jpg" align ="left"></a>香港警察队员佐级协会主席林志伟于12月27日向会员发信，批评“和理非”，将“和理非”及“勇武派”共同归为“反派”来打击。前特首梁振英则于29日在脸书回应香港电台增拨资源的要求，唱反调，称要彻底把香港金融和香港人生活基础条件，牢牢控制在港府手里，用这些资源来调控“反派”和“挺派”力量。从林志伟及梁振英的舆论，不难看到中共加速政治分化港人和进一步限制香港人的自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 6:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank">历史即将翻开新页 痛忆香港抗争者的创伤</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190825115157100615-150x120.jpg" align ="left"></a>香港这场轰轰烈烈的反送中运动上升到反抗中共暴政的运动，被认为是香港人的觉醒运动。香港年轻一代为捍卫港人自身权益和香港的未来付出了巨大代价，也感动了更多的成年人挺身而出，形成不分勇武、不割席“齐上齐落”的抗争场面。
+
+新的一年即将来临，历史将翻过新的一页，让我们来盘点一下这半年多来，在中共暴政背后的操控下，香港警方的滥捕滥暴给港人留下怎么样的创伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank">港警官吐露心声：被迫处于冲突中心 支持调查</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-1-150x120.jpg" align ="left"></a>圣诞节期间，香港再次爆发警民冲突，上百人被逮捕，引起争议的港警处于冲突中心。德广联驻记者在香港采访了一名警官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 11:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-80154634-150x120.jpg" align ="left"></a>上周，圣诞求救信披露上海青浦监狱强制外国囚犯劳动恶行。数名名曾被关在该监狱的受害者揭发更多恐怖细节，其中一名男子是求救信主笔者之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank">黄之锋入选金融时报全球50大重要人物</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/29/n11752063.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/wong1-150x120.jpg" align ="left"></a>英国《金融时报》日前公布了2010年以来过去10年影响全球的50位重要人物名单，其中香港众志秘书长黄之锋以“香港政治活动人士”的身份入选，成为唯一上榜的香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank">山东警察跨省抓捕 丁家喜等人下落不明</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3-21-150x120.jpg" align ="left"></a>12月26日晚，新公民运动组织者之一，北京维权律师丁家喜，福建维权人士戴振亚分别被山东警方带走。目前，没有进一步消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 5:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank">程晓容：法制人权黑暗年 2019的中国故事</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751027.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-77223993-150x120.jpg" align ="left"></a>要想了解中国，不应听信中共兜售的故事，因为那些章节里的鲜花和光环，碾碎了几代中国人的权利和幸福、还企图淹没苦难中的呐喊和抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 4:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank">控告江泽民  山东壁挂厂长田世洪遭迫害离世</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746872.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1907181540511973-450x300-150x120.jpg" align ="left"></a>山东威海市文登壁挂厂厂长田世洪坚持修炼法轮功，多次遭骚扰、绑架、非法关押，曾经被非法劳教，身心上长期遭受高压迫害，于11月底含冤离世，终年64岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748578.md#1" target="_blank">贵州访民三孩无法入学 当局逼毁上访证据</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11748578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13967386-150x120.jpg" align ="left"></a>贵州大方县黄泥塘镇一村民，多年前因镇政府整脏治乱工作中遭到政法委书记暴打致残，三个孩子至今无法入学。当地警方逼他签同意书毁灭信访证据后才能让孩子上学。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:06 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank">滥用“精神病” 大陆排查病患被指侵犯人权</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-4-17-minghui-persecution-191359-0-150x120.jpg" align ="left"></a>在中国大陆，“被精神病”成为中共惯用的维稳手段。专家指出，精神病的排查被滥用，往往成为政治迫害的工具，而由于精神卫生医疗条件和专业化的限制，很多真正的精神病人却很难被救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank">九位老人一起读法轮功著作 被构陷到检察院</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11746496.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2004-11-2-zfl-2-150x120.jpg" align ="left"></a>陕西省岐山县公安局调动30多名警察，于7月10日绑架了在一起学习法轮功著作的九位老人，非法抄家，抢劫私人财物。其中徐明侠、焦炳兰、亚兰、沈红奇一直被非法关押、构陷，邵启虎等五位老人被取保候审后放回家，目前也被构陷到检察院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank">临沂监狱欲盖弥彰？王全璋健康堪忧</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747344.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-19-150x120.jpg" align ="left"></a>卷入709事件而被判刑入狱的维权律师王全璋，健康状况一直备受外界关注。周四（26日）他向探监的妻子李文足重申，自己一切正常，但种种迹象却显示情况刚好相反，而山东临沂监狱却刻意掩饰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank">圣诞佳节：别忘记失去自由的维权人士</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/image-3-150x120.jpg" align ="left"></a>在圣诞佳节，关注中国劳工权益的英文网上期刊《中国制造》（Made in China Journal）发表文章，提醒读者不要忘记一班现在仍然失去自由的中国维权人士。文章列举其中几位维权人士，呼吁社会要继续关注他们的处境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:04 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank">法轮功学员沈子力生前遭受的经济迫害</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-19-150x120.jpg" align ="left"></a>齐齐哈尔法轮功学员沈子力于2007年2月27日被迫害致死，距今近13年。在中共疯狂的迫害中，沈子力遭受了残酷的肉体和精神折磨，以及经济上的严重迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 11:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745201.md#1" target="_blank">冤狱酷刑 株连迫害 法轮功学员付金凤的遭遇</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745201.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-20-150x120.jpg" align ="left"></a>江西省南昌市中心血站护师付金凤因坚持修炼法轮功，多次被非法关押、劳教、判刑，家庭被拆散，母亲在悲愤中离世，给她身心造成极大的伤害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank">【新闻看点】圣诞祝福 全球网友寄语香港</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912240928582478-150x120.jpg" align ="left"></a>12月7日，我们发起了《2020：寄语香港》活动。目的是给大家提供一个平台，用诗文乐画的方式，向香港人送上一份新年祝福。活动开始后，我们陆续收到了很多朋友们的Email，都希望通过新闻看点，向香港人传递一份祝福。因为实在太多了，所以决定分为上下两个部分播出。今天播出上半部分，然后元旦当天再播出下半部分。即使这样，一些朋友太长的文字祝福，也只能撷取其中精华部分.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank">【预告】新唐人圣诞节期间播出电影《归途》</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0d2b09f7df0e78900d26a02647216a96-150x120.jpg" align ="left"></a>2019圣诞节期间，新唐人将独家播出根据真人真事改编的电影《归途 》（Origin Bound）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/28/n11751457.md#1" target="_blank">曾陷冤狱7年 法轮功学员赵吉元再遭冤判</a><br></h3>曾陷冤狱7年的辽宁省沈阳市大东区法轮功学员赵吉元，于7月10日再度被绑架，近日被沈阳市和平区法院非法判刑7年半。赵吉元已上诉到中级法院。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 2:13 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/26/n11747235.md#1" target="_blank">甘肃庆阳市法轮功学员被迫害情况综述（上）</a><br></h3>20年来，据不完全统计，甘肃庆阳市一千多位修炼者遭到残酷的迫害，其中，被迫害致死或迫害离世30人，被非法判刑的77人次，被非法劳教的70多人次，遭到非法关押、刑事拘留的及传唤的500多人次，被非法开除公职的17人，被警察等抢去的钱财达几百万元之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_4.md#1">下一页</a></h3></td></tr>
+</table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qgedzr297/djy/blob/master/gb/ncid278_3.md#1<br><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid278_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/ncid278_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid278_3.htm">http://www.epochtimes.com/gb/ncid278_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
