--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11783300.md#1">美杀伊朗将军震慑中南海 传习招7常委紧急开会</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791025.md#1">王友群：蔡英文胜选获国际赞赏的五个原因</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789532.md#1">陈思敏：中国足球资金寒冬曝经济实情</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789989.md#1">程晓容：60国贺蔡英文胜选 中共输在哪里？</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789473.md#1">李铭：泛滥的酷刑迫害</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787398.md#1">念贲：没有选票  我们去奋斗去努力</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787244.md#1">程晓容：台大选重挫中共 五大冲击波牵动全球</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787346.md#1">岳高：好人被迫害 中共魔性显</a><br>
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786644.md#1">夏小强：台湾选举蔡英文获压倒性胜利 意义重大</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -30,7 +30,7 @@
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/qgedzr297/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791008.md#1">【新闻看点】川普召200人见证签署 促习兑现承诺</a><br>
+<a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11791008.md#1">【新闻看点】川普邀200人见证签署 促习兑承诺</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790901.md#1">一年倒闭近2万家 大陆游戏公司陷窘境</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790922.md#1">十家九亏 大陆去年超3000奶茶企业倒闭</a><br>
 <a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790557.md#1">60国家及组织恭贺连任 蔡英文：共享民主喜悦</a><br>
