--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -38,7 +38,6 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank">镁是放松情绪的天然镇静剂 “这些食物”能补充</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/magnesium-food_522984916-150x120.jpg" align ="left"></a>时常感到紧张、焦躁或忧郁吗？这可能是体内缺镁的关系。镁有助于稳定情绪和松弛肌肉，只是现代人饮食习惯改变，爱吃加工食品和大鱼大肉，因此普遍有缺镁的情况。在饮食中多摄取一些含镁食物，能让你心情变好。镁有“天然镇静剂”之称，能放松神经肌肉，是让人心情平静、愉快的矿物质。还能影响血糖、血压的调控。富含镁的食物包括：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 2:46 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786798.md#1" target="_blank">德国饮食传统 (2) ：体现节约的德国馄饨</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9072dc1d235ca_ttl7dayqjL_shutterstock_1301549560-150x120.jpg" align ="left"></a>传说中，德国馄饨是在17世纪时，由莫尔布龙修道院（Maulbronn）的西多会修士所创出的。而且，这道菜被创造出来，其实是因为有修士想要偷偷吃肉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789381.md#1" target="_blank">澳洲野火烧不尽 动物园园长把动物带回家养</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789381.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1198632841-150x120.jpg" align ="left"></a>澳洲野火延烧了几个月，不但迫使许多人撤离，也让数不清的动物失去家园、甚至生命。有一座动物园的园长为了保护园内动物的安全，索性把体型较小的动物带回家照顾。而带不走的大型动物，也有相关人员留下来看守。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 1:22 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775243.md#1" target="_blank">针灸治疗失眠益处多</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1409300914252483-150x120.jpg" align ="left"></a>针灸治疗失眠效果明显。“失眠”在中医上会归类于“大脑失调”。“针灸”，可以改善大脑的“兴奋”和“抑制”，帮助“睡”和“醒”之间有正常的节奏，采用“针灸疗法”治疗失眠，是极为安全可靠的，而且完全无副作用。有个长年受失眠之苦的病患找我看诊，只接受了二星期共十次的针灸，每晚便可增加2小时的睡眠，治疗一个月后，失眠问题消失，每.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank">受喜爱也是最脏的化妆品 使用不当小心脸部危机</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11786298.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cosmetics-health_175336325-copy-150x120.jpg" align ="left"></a>如果化妆品保养不当、化妆工具没有适当清洗，细菌会不断在上面累积，用后导致脸部长脓包，或引发其它肌肤疾病。使用过的化妆品中，约8到9成有细菌污染，包含金黄色葡萄球菌、大肠杆菌与弗氏柠檬酸杆菌。美妆蛋最脏，唇蜜排第二。另外，使用过期化妆品也很危险。97.9%的人会在化妆品过期后继续使用。如何正确清洗、保存化妆品？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 12:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank">德国饮食传统 (1) ：中午前吃完的白香肠</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786682.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e9008cb33366da_ttl7daydzr_shutterstock_1023386170-150x120.jpg" align ="left"></a>德国的香肠种类多达上千种，各区域都有风味不同的特色香肠，如味道浓厚的法兰克福香肠，尺寸小巧的纽伦堡香肠，以及我们今天介绍一定要在中午前吃完的白香肠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786823.md#1" target="_blank">乌克兰女星在台湾首次体验投票 只花5分钟</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786823.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1901240243242122-150x120.jpg" align ="left"></a>在今年的台湾总统大选中，118万的首投族多半是年轻人，但其中有一名新住民的身份特殊，她就是来自乌克兰的艺人暨模特儿瑞莎（Larisa Bakurova）。瑞莎说，很高兴能在台湾进行她生平的第一次投票，她只花5分钟就投完票，感觉台湾好棒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:03 PM			</td></tr>
@@ -54,6 +53,7 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank">老爷爷亲手编织“白癜风娃娃”疗愈儿童患者</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779521.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7ee7890ec85f10aa1bc5a2357839953e-150x120.jpg" align ="left"></a>住在巴西的一位64岁爷爷，由于自己是一位白癜风患者，退休后开始制作“白癜风娃娃”送给患有同样症状的儿童，收到娃娃的孩子们个个都高兴的爱不释手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank">车评：超越53MPG 2020 Toyota Corolla Hybrid LE</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11781628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_Toyota_Corolla_Hybrid_03-150x120.jpg" align ="left"></a>Toyota的长青车系Corolla，已迈进第十二代，去年已率先测试了被Toyota称为“Haute Hatch”的Hatchback揭背版本，动力不错又有动感外形，与Mazda3 Hatchback及Honda Civic Hatchback成为最受欢迎的三款日系Hatchback，其实还有Subaru Imprez.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780612.md#1" target="_blank">【胡乃文开讲】台湾大选结果开心愤怒都伤身 拍打2处平静情绪</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/daxuan33-200109-150x120.jpg" align ="left"></a>台湾选举季节到了 ，你是否每天盯着电视政论节目，整个人变得亢奋、紧张??小心！选举症候群已经上身。最近有报导说 ，选举前一个月，选举症候群求诊人数就增加两成 。敲打经络有助于平静心情。如果你与别人有不同意见时，火气一下就上来；或者你支持的候选人没选上，心中产生气恨的话，容易出现肝胆的问题。我们可以拍打胆经。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:58 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11771200.md#1" target="_blank">墨尔本父亲圣诞礼物独具创意 网友艳羡</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11771200.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/cubby-150x120.jpg" align ="left"></a>墨尔本一位极富创意的父亲用一双巧手，把从Kmart购买的仅199澳元的玩具小屋，改造成了一栋精致而华丽的房屋模型，送给孩子作为圣诞礼物。此举获得了数以千计的网友点赞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 4:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11783310.md#1" target="_blank">汽车维修问与答：气温零下时方向盘变紧</a><br></h3>汽车维修问与答
 
 读者Grace问：李师傅您好!
